--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
 
         <li>
           <a
-            href="https://www.linkedin.com/in/tha%C3%ADs-brasileiro-torres-74771b176"
-          >
+            href="https://www.linkedin.com/in/tha%C3%ADs-brasileiro-torres-74771b176" target="_blank">
             Meu Linkedin
           </a>
         </li>
