--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <ion-icon name="mail-outline"></ion-icon>
         </a>
 
-        <a href="https://www.instagram.com/thabrasileiroo/" target="_blank">
+        <a href="" target="_blank">
           <ion-icon name="logo-instagram"></ion-icon>
         </a>
       </div>
